--- a/nginx.conf
+++ b/nginx.conf
@@ -1,3 +1,5 @@
+env DATADOG_RUM_CLIENT_TOKEN;
+
 worker_processes auto;
 
 events {
@@ -63,21 +65,45 @@ http {
             access_log off;
         }
 
+        location / {
+            return 404;
+        }
+
         # Health check endpoint
-        location /health {
+        location = /health {
             default_type application/json;
             return 200 '{"status": "healthy"}';
         }
 
-        location / {
-            # Add an X-Forwarded-For header containing the request client IP address for accurate geoIP
+        location = /dd-rum {
+            if ($request_method != POST) { return 405; }
+            if ($arg_ddforward = "") { return 400 "Missing ddforward"; }
+
+            # First decode the URL
+            set_by_lua $decoded_forward '
+                return ngx.unescape_uri(ngx.var.arg_ddforward)
+            ';
+
+            # Then perform the token replacement on the decoded URL
+            set_by_lua $datadog_rum_client_token 'return os.getenv("DATADOG_RUM_CLIENT_TOKEN")';
+            set $modified_forward $decoded_forward;
+            if ($modified_forward ~* "(.*)(dd-api-key=)DATADOG_CLIENT_TOKEN(&.*|$)") {
+                set $modified_forward $1$2$datadog_rum_client_token$3;
+            }
+
+            # Finally proxy the request
+            proxy_pass https://browser-intake-datadoghq.com$modified_forward;
+
+            # Force HTTP/2 for upstream
+            proxy_http_version 1.1;
+            proxy_set_header Connection "";
+            proxy_set_header Upgrade $http_upgrade;
+
+            # Required headers
+            proxy_set_header Host browser-intake-datadoghq.com;
+            proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-
-            # Forward the request using the POST method
-            proxy_method POST;
-
-            # Proxy forward to defined Datadog Intake Origin
-            proxy_pass https://browser-intake-datadoghq.com;
+            proxy_set_header X-Forwarded-Proto $scheme;
         }
     }
 }
