--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,4 +6,6 @@ services:
     container_name: datadog-rum-proxy
     ports:
       - "8080:8080"
+    env_file:
+      - .env
     restart: unless-stopped
